application properties and dependencies updated.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,14 @@
+spring.application.name=sample-service-rest
+server.port=8080
+
+management.health.defaults.enabled = false
+
+exchangerate.api.url=https://api.apilayer.com/exchangerates_data/convert?to=toValue&from=fromValue&amount=amountValue
+exhangerate.api.apikey=pxb4Hvh2Xk5Fz3ZUx6ii2XccLCX0cdCf
+
+exchangerate.latest.api.url=https://api.apilayer.com/exchangerates_data/latest?symbols=symbolsValue&base=
+exhangerate.applicablecurrencies=EUR,SEK,USD
+exhangerate.base=
+
+using.spring.schedulerFactory=true
 
